fix layout issues

--- a/client/src/components/page-exp.less
+++ b/client/src/components/page-exp.less
@@ -5,7 +5,7 @@
 .page-exp {
 
     .page-content {
-        padding: 20px 20px 0 20px;
+        padding: 5px 20px 0 20px;
     }
 
     .chart-ctx-container {
