--- a/client/src/overrides.less
+++ b/client/src/overrides.less
@@ -50,7 +50,7 @@
         padding-top: 0;
 
         .timeseries-overview{
-            margin-top: 20px;
+            margin-top: 0;
         }
 
         .nav-tabs-custom-mtv, .nav-tabs-custom-mtv>.tab-content {
